test/param/errors/too-big-param-int8.chpl
param q:int(8) = 257;
writeln(q);
